--- a/src/Website/index.css
+++ b/src/Website/index.css
@@ -4,6 +4,16 @@
   background-repeat: no-repeat;
   background-position: left;
   transition: 0.5s;
-
-
 }
+
+/* .imaggeSet {}
+ */
+
+/* .setingImage {
+
+  width: 600px;
+  position: absolute;
+  margin-top: -10px;
+  right: 0;
+  margin-right: -40px;
+} */
